--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
    
 
 
-    <script src="app.js" type="text/javascript">
-
-    </script>
+    <script src="app.js" type="text/javascript"></script>
 
 </body>
 </html>
