--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minion Translator</title>
-</head>
-<body>
+  </head>
+  <body>
     <style>
-        #txt-input {
-            width: 95%;
-            padding: 1rem;
-            display: block;
-            height: 10vh;
-            margin: 1rem ;
-        }
+      #txt-input {
+        width: 95%;
+        padding: 1rem;
+        display: block;
+        height: 10vh;
+        margin: 1rem;
+        border-radius: 2rem;
+        text-align: center;
+      }
 
-        #btn-translate {
-            display: block;
-            padding: 1rem 1rem;
-            max-width: 120px;
-            margin: auto;
-        }
+      #btn-translate {
+        display: block;
+        padding: 1rem 1rem;
+        max-width: 120px;
+        margin: auto;
+        background-color: mediumseagreen;
+        color: white;
+        border: 2px solid mediumseagreen;
+        border-radius: 1rem;
+        cursor: pointer;
+      }
 
-        #output-box {
-            width: 95%;
-            padding: 1rem;
-            display: block;
-            height: 10vh;
-            margin: 1rem ;
-            border: 1px solid black;
-        }
-
+      #output-box {
+        width: 95%;
+        padding: 1rem;
+        display: block;
+        height: 10vh;
+        margin: 1rem;
+        border: 1px solid black;
+        border-radius: 2rem;
+        text-align: center;
+      }
     </style>
-    <h1>Minion Translator</h1>
+    <h1 style="text-align: center; color: mediumseagreen">Minion Translator</h1>
 
     <textarea id="txt-input" placeholder="Enter text in English"></textarea>
 
     <button id="btn-translate">Translate</button>
 
     <div id="output-box"></div>
-   
-
 
     <script src="app.js" type="text/javascript"></script>
-
-</body>
+  </body>
 </html>
