style: added little details

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       }
     </style>
     <h1 style="text-align: center; color: mediumseagreen">Minion Translator</h1>
+    <h4 style="text-align: center; color: slategray">
+      Translate English to Minion with this fun little translator
+    </h4>
 
     <textarea id="txt-input" placeholder="Enter text in English"></textarea>
 
